Update PermutationsII.java